--- a/package.json
+++ b/package.json
@@ -10,8 +10,34 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-community/blur": "^4.4.0",
+    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-firebase/app": "^20.3.0",
+    "@react-native-firebase/auth": "^20.3.0",
+    "@react-native-firebase/firestore": "^20.3.0",
+    "@react-native-firebase/messaging": "^20.3.0",
+    "@react-native-vector-icons/ionicons": "^7.4.0-alpha.16",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "date-fns": "^3.6.0",
+    "haversine": "^1.1.1",
     "react": "18.2.0",
-    "react-native": "0.74.3"
+    "react-native": "0.74.3",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-check-box": "^2.1.7",
+    "react-native-datepicker": "^1.7.2",
+    "react-native-geolocation-service": "^5.3.1",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-push-notification": "^8.1.1",
+    "react-native-safe-area-context": "^4.10.8",
+    "react-native-screens": "^3.32.0",
+    "react-native-svg": "^15.4.0",
+    "react-native-vector-icons": "^10.1.0",
+    "react-native-video": "^6.4.3",
+    "react-native-webview": "^13.10.5",
+    "react-native-youtube-iframe": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
